--- a/tests/licensedcode/data/datadriven/external/licensecheck/devscripts/false-positives.yml
+++ b/tests/licensedcode/data/datadriven/external/licensecheck/devscripts/false-positives.yml
@@ -1,5 +1,5 @@
 license_expressions:
-  - x11-tiff
+  - other-permissive
   - generic-cla
   - unknown-license-reference
   - unknown-license-reference
