--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/mx4j-1.0.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/mx4j-1.0.txt.yml
@@ -2,3 +2,5 @@ license_expressions:
   - mx4j
 notes: this is a license from fossology license reference MX4J-1.0 (The MX4J License, Version
   1.0) http://mx4j.sourceforge.net/docs/ch01s06.html
+expected_failure: yes
+
