Improve existing license
This updates and refines various license metadata

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/scilab-en-2005.yml
+++ b/src/licensedcode/data/licenses/scilab-en-2005.yml
@@ -2,7 +2,7 @@ key: scilab-en-2005
 short_name: SCILAB en 2005
 name: SCILAB License 2005
 category: Proprietary Free
-owner: INRIA/ENPC
+owner: Scilab Consortium (Digiteo)
 homepage_url: http://web.archive.org/web/20051212214843/http://www.scilab.org/legal/license.html
 spdx_license_key: LicenseRef-scancode-scilab-en
 other_spdx_license_keys:
