--- a/src/licensedcode/data/licenses/apl-1.1.yml
+++ b/src/licensedcode/data/licenses/apl-1.1.yml
@@ -1,7 +1,7 @@
 key: apl-1.1
 short_name: APL-1.1
 name: Academic Public License version 1.1
-category: Permissive
+category: Copyleft Limited
 owner: OMNeT++
 homepage_url: https://github.com/omnetpp/omnetpp/blob/master/doc/License
 spdx_license_key: LicenseRef-scancode-apl-1.1
