--- a/src/licensedcode/data/licenses/kfqf-accepted-gpl.yml
+++ b/src/licensedcode/data/licenses/kfqf-accepted-gpl.yml
@@ -2,7 +2,7 @@ key: kfqf-accepted-gpl
 short_name: KFQF Accepted GPL
 name: KFQF Accepted GPL
 category: Copyleft
-owner: KDE Free Qt Foundation
+owner: KDE Project
 homepage_url: https://github.com/KDE/licensedigger/blob/master/licensetexts/LicenseRef-KFQF-Accepted-GPL.txt
 is_exception: yes
 spdx_license_key: LicenseRef-scancode-kfqf-accepted-gpl
