--- a/src/licensedcode/data/licenses/marvell-firmware.yml
+++ b/src/licensedcode/data/licenses/marvell-firmware.yml
@@ -3,5 +3,5 @@ short_name: Marvell Firmware License
 name: Marvell Firmware License
 category: Proprietary Free
 owner: Marvell
-homepage_url: https://dev.openwrt.org/browser/trunk/package/libertas/files/LICENSE?rev=9768
+homepage_url: https://git.kernel.org/pub/scm/linux/kernel/git/firmware/linux-firmware.git/tree/LICENCE.OLPC
 spdx_license_key: LicenseRef-scancode-marvell-firmware
