--- a/src/licensedcode/data/licenses/pbl-1.0.yml
+++ b/src/licensedcode/data/licenses/pbl-1.0.yml
@@ -1,9 +1,9 @@
 key: pbl-1.0
 short_name: PBL-1.0
-name: PERMISSIVE BINARY LICENSE v1.0
-owner: mbed
-category: Permissive
+name: Permissive Binary License 1.0
+category: Free Restricted
+owner: ARM
+homepage_url: https://os.mbed.com/licenses/permissive-binary-license/
 spdx_license_key: LicenseRef-scancode-pbl-1.0
 text_urls:
-  - https://os.mbed.com/licenses/permissive-binary-license/
-  
+    - https://os.mbed.com/licenses/permissive-binary-license/
