--- a/src/licensedcode/data/licenses/qlogic-firmware.yml
+++ b/src/licensedcode/data/licenses/qlogic-firmware.yml
@@ -5,3 +5,5 @@ category: Proprietary Free
 owner: QLogic
 homepage_url: https://github.com/wkennington/linux-firmware/blob/master/LICENCE.qla2xxx
 spdx_license_key: LicenseRef-scancode-qlogic-firmware
+text_urls:
+    - https://git.kernel.org/pub/scm/linux/kernel/git/firmware/linux-firmware.git/tree/LICENCE.qla2xxx
