Add missing categories to SPDX licenses
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/cc-by-nc-sa-3.0-igo.yml
+++ b/src/licensedcode/data/licenses/cc-by-nc-sa-3.0-igo.yml
@@ -1,5 +1,5 @@
 key: cc-by-nc-sa-3.0-igo
-short_name: Creative Commons Attribution Non Commercial Share Alike 3.0 IGO
+short_name: CC-BY-NC-SA-3.0-IGO
 name: Creative Commons Attribution Non Commercial Share Alike 3.0 IGO
 spdx_license_key: CC-BY-NC-SA-3.0-IGO
 other_urls:
