--- a/src/licensedcode/data/licenses/cc-by-nc-sa-2.0-uk.yml
+++ b/src/licensedcode/data/licenses/cc-by-nc-sa-2.0-uk.yml
@@ -1,8 +1,11 @@
 key: cc-by-nc-sa-2.0-uk
-short_name: Creative Commons Attribution Non Commercial Share Alike 2.0 England and Wales
+short_name: CC-BY-NC-SA-2.0-UK
 name: Creative Commons Attribution Non Commercial Share Alike 2.0 England and Wales
+category: Source-available
+owner: Creative Commons
+homepage_url: http://creativecommons.org/licenses/by-nc-sa/2.0/uk/
 spdx_license_key: CC-BY-NC-SA-2.0-UK
-other_urls:
+text_urls:
     - https://creativecommons.org/licenses/by-nc-sa/2.0/uk/legalcode
 ignorable_urls:
     - https://creativecommons.org/
