Add new and improve existing licenses
Contributed-by: Dennis Clark <dmclark@nexb.com>
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/bsd-original-voices.yml
+++ b/src/licensedcode/data/licenses/bsd-original-voices.yml
@@ -7,4 +7,4 @@ homepage_url: https://github.com/freebsd/freebsd-src/blob/098dbd7ff7f3da9dda0380
 spdx_license_key: LicenseRef-scancode-bsd-original-voices
 ignorable_authors:
   - Bill Paul
-
+minimum_coverage: 99
