Improve existing license rules
Update relervance, minimu coverage and license expressions

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/rules/artistic-2.0_26.yml
+++ b/src/licensedcode/data/rules/artistic-2.0_26.yml
@@ -1,4 +1,5 @@
 license_expression: artistic-2.0
-is_license_tag: yes
+is_license_notice: yes
 relevance: 100
-notes: tag as documented in the Module-Build pod
+referenced_filenames:
+    - /usr/share/common-licenses/Artistic
