--- a/src/licensedcode/data/rules/bsd-original-uc.yml
+++ b/src/licensedcode/data/rules/bsd-original-uc.yml
@@ -1,4 +1,5 @@
 license_expression: bsd-original-uc
+relevance: 100
 is_license_reference: yes
 ignorable_urls:
     - ftp://ftp.cs.berkeley.edu/pub/4bsd/README.Impt.License.Change
