--- a/src/licensedcode/data/rules/bsd-new_362.yml
+++ b/src/licensedcode/data/rules/bsd-new_362.yml
@@ -1,2 +1,5 @@
 license_expression: bsd-new
-is_license_text: yes
+is_license_tag: yes
+relevance: 100
+ignorable_urls:
+    - https://spdx.org/licenses/BSD-3-Clause
