--- a/src/licensedcode/data/rules/gpl-2.0-plus_810.yml
+++ b/src/licensedcode/data/rules/gpl-2.0-plus_810.yml
@@ -1,4 +1,5 @@
 license_expression: gpl-2.0-plus
-is_license_notice: yes
-referenced_filenames:
-    - /usr/share/common-licenses/GPL-2
+is_license_tag: yes
+relevance: 100
+ignorable_urls:
+    - https://spdx.org/licenses/GPL-2.0-or-later
