--- a/src/licensedcode/data/rules/lgpl-2.0_157.yml
+++ b/src/licensedcode/data/rules/lgpl-2.0_157.yml
@@ -1,5 +1,6 @@
 license_expression: lgpl-2.0
 is_license_reference: yes
 minimum_coverage: 90
+relevance: 100
 referenced_filenames:
     - /usr/share/common-licenses/LGPL-2
