--- a/src/licensedcode/data/rules/pcre_7.yml
+++ b/src/licensedcode/data/rules/pcre_7.yml
@@ -1,4 +1,5 @@
 license_expression: pcre
+relevance: 100
 is_license_reference: yes
 ignorable_urls:
     - ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/
