--- a/src/licensedcode/data/rules/public-domain_355.yml
+++ b/src/licensedcode/data/rules/public-domain_355.yml
@@ -1,4 +1,5 @@
 license_expression: public-domain
 is_license_notice: yes
+relevance: 100
 minimum_coverage: 100
 notes: Seen in debian copyright file for liblzma.
