--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -59,7 +59,7 @@ install_requires =
     chardet >= 3.0.0
     click >= 6.7, !=7.0
     colorama >= 0.3.9
-    commoncode >= 21.8.27
+    commoncode >= 21.8.31
     debian-inspector >= 30.0.0
     dparse >= 0.5.1
     fasteners
@@ -197,6 +197,7 @@ scancode_output =
     jsonlines = formattedcode.output_jsonlines:JsonLinesOutput
     template = formattedcode.output_html:CustomTemplateOutput
     debian = formattedcode.output_debian:DebianCopyrightOutput
+    yaml = formattedcode.output_yaml:YamlOutput
 
 
 [tool:pytest]
