--- a/tests/cluecode/data/ics/oprofile-utils/opcontrol.yml
+++ b/tests/cluecode/data/ics/oprofile-utils/opcontrol.yml
@@ -3,13 +3,13 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright 2002 Read
+  - Copyright 2002 Read the
   - Copyright IBM Corporation 2007
 holders:
-  - Read
+  - Read the
   - IBM Corporation
 holders_summary:
   - value: IBM Corporation
     count: 1
-  - value: Read
+  - value: Read the
     count: 1
