--- a/tests/cluecode/data/copyrights/lines.txt.yml
+++ b/tests/cluecode/data/copyrights/lines.txt.yml
@@ -1,5 +1,5 @@
 what:
   - copyrights
 copyrights:
-  - Copyright: 2001, Eric Lavigne
-  - Copyright: 2011, Jim Hollinger
+  - Copyright 2001, Eric Lavigne
+  - Copyright 2011, Jim Hollinger
