Correct license test after copyright fix #2624
Ignorable copyrights have changed a bit,

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com.

--- a/src/licensedcode/data/licenses/sata.yml
+++ b/src/licensedcode/data/licenses/sata.yml
@@ -9,9 +9,9 @@ other_urls:
     - https://github.com/zTrix/sata-license
     - https://github.com/kongtianyi/sata-license
 ignorable_copyrights:
-    - Copyright (c) 2014 zTrix(i@ztrix.me)
+    - Copyright (c) 2014 zTrix(i@ztrix.me) kongtianyi(kongtianyi@foxmail.com)
 ignorable_holders:
-    - zTrix(i@ztrix.me)
+    - zTrix(i@ztrix.me) kongtianyi(kongtianyi@foxmail.com)
 ignorable_urls:
     - https://github.com/kongtianyi/sata-license
     - https://github.com/zTrix/sata-license
