--- a/src/licensedcode/data/licenses/accellera-systemc.yml
+++ b/src/licensedcode/data/licenses/accellera-systemc.yml
@@ -7,11 +7,13 @@ homepage_url: https://www.accellera.org/images/about/policies/SystemC_Open_Sourc
 spdx_license_key: LicenseRef-scancode-accellera-systemc
 faq_url: https://accellera.org/about/policies-and-procedures
 ignorable_copyrights:
-    - (c) 1996- current
+    - (c) 1996- current year here
+    - (c) 1996- current year here by all Contributors
     - Copyright (c) 1996- current year here by all Contributors
 ignorable_authors:
     - through the Accellera working group process
 ignorable_holders:
+    - here
     - here by all Contributors
 ignorable_urls:
     - http://www.accellera.org/
