rename cyclonedx cli options to favor json over xml #1888
Signed-off-by: Alexander Gschrei <alexander.gschrei@fau.de>

--- a/setup.cfg
+++ b/setup.cfg
@@ -199,7 +199,7 @@ scancode_output =
     debian = formattedcode.output_debian:DebianCopyrightOutput
     yaml = formattedcode.output_yaml:YamlOutput
     cyclonedx = formattedcode.output_cyclonedx:CycloneDxOutput
-    cyclonedx-json = formattedcode.output_cyclonedx:CycloneDxJsonOutput
+    cyclonedx-xml = formattedcode.output_cyclonedx:CycloneDxXmlOutput
 
 
 [tool:pytest]
