--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ saneyaml==0.5.2
 six==1.16.0
 sortedcontainers==2.4.0
 soupsieve==2.2.1
-spdx-tools==0.6.1
+spdx-tools==0.7.0a3
 text-unidecode==1.3
 toml==0.10.2
 typecode==21.6.1
