--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -93,7 +93,7 @@ install_requires =
     pymaven_patch >= 0.2.8
     requests >= 2.7.0, < 3.0.0
     saneyaml >= 0.5.2
-    spdx_tools >= 0.6.0
+    spdx_tools >= 0.7.0a3
     text_unidecode >= 1.0, < 2.0
     toml >= 0.10.0
     typing >=3.6, < 3.7; python_version < "3.7"
