--- a/tests/cluecode/data/copyrights/contributors.txt.yml
+++ b/tests/cluecode/data/copyrights/contributors.txt.yml
@@ -1,7 +1,6 @@
 what:
   - copyrights
 copyrights:
-  - Copyright (c) 2007-2018 Free Software Foundation, Inc.
-  - Copyright 2011 Free Software Foundation, Inc.
+  - Copyright (c) 2015, Contributors
 
 
