Add new and improve existing license rules
Various GPL 3.0 licenses

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/rules/gpl-3.0-plus_513.yml
+++ b/src/licensedcode/data/rules/gpl-3.0-plus_513.yml
@@ -1,5 +1,6 @@
-license_expression: gpl-3.0-plus
+license_expression: gpl-3.0
 is_license_text: yes
+notes: this is a plain GPL not "or later"
 ignorable_copyrights:
     - Copyright (c) 2007 Free Software Foundation, Inc. <https://fsf.org/>
 ignorable_holders:
