--- a/src/licensedcode/data/rules/mit_757.yml
+++ b/src/licensedcode/data/rules/mit_757.yml
@@ -1,5 +1,5 @@
 license_expression: mit
 is_license_notice: yes
-relevance: 100
+minimum_coverage: 95
 ignorable_urls:
     - http://opensource.org/licenses/MIT
