--- a/src/licensedcode/data/rules/mit_759.yml
+++ b/src/licensedcode/data/rules/mit_759.yml
@@ -1,6 +1,6 @@
 license_expression: mit
 is_license_notice: yes
-relevance: 100
+minimum_coverage: 95
 referenced_filenames:
     - README
 ignorable_urls:
