--- a/tests/formattedcode/data/yaml/simple-expected.yaml
+++ b/tests/formattedcode/data/yaml/simple-expected.yaml
@@ -14,10 +14,13 @@ headers:
       for any legal advice.
       ScanCode is a free software code scanning tool from nexB Inc. and others.
       Visit https://github.com/nexB/scancode-toolkit/ for support and download.
+    output_format_version: 1.0.0
     message:
     errors: []
     extra_data:
+      spdx_license_list_version: '3.14'
       files_count: 1
+packages: []
 files:
   - path: simple
     type: directory
