--- a/tests/formattedcode/data/yaml/tree/expected.yaml
+++ b/tests/formattedcode/data/yaml/tree/expected.yaml
@@ -15,10 +15,13 @@ headers:
       for any legal advice.
       ScanCode is a free software code scanning tool from nexB Inc. and others.
       Visit https://github.com/nexB/scancode-toolkit/ for support and download.
+    output_format_version: 1.0.0
     message:
     errors: []
     extra_data:
+      spdx_license_list_version: '3.14'
       files_count: 7
+packages: []
 files:
   - path: copy1.c
     type: file
