Requalify some notice license rules as references
This changes a number of rules with unqualified license names (such as "Apache 2.0
License") to be classified as (the weaker) "reference" rather than (the
stronger) notice.

In practice, this means that the `is_license_notice` property is changed to
`is_license_reference` for a number of rules.

Signed-off-by: Peter Gardfjäll <peter.gardfjall.work@gmail.com>

--- a/src/licensedcode/data/rules/gpl-2.0_617_1.yml
+++ b/src/licensedcode/data/rules/gpl-2.0_617_1.yml
@@ -1,8 +1,9 @@
 license_expression: gpl-2.0
-is_license_notice: yes
+is_license_reference: yes
 relevance: 100
 minimum_coverage: 100
-notes: At https://web.archive.org/web/20020809115410/ftp://prep.ai.mit.edu/pub/gnu/GPL the text
-    is a GPL 2.0 license text
+notes:
+  At https://web.archive.org/web/20020809115410/ftp://prep.ai.mit.edu/pub/gnu/GPL the text
+  is a GPL 2.0 license text
 ignorable_urls:
-    - ftp://prep.ai.mit.edu/pub/gnu/GPL
+  - ftp://prep.ai.mit.edu/pub/gnu/GPL
