--- a/src/licensedcode/data/rules/bsd-simplified_195.yml
+++ b/src/licensedcode/data/rules/bsd-simplified_195.yml
@@ -1,5 +1,5 @@
 license_expression: bsd-simplified
-is_license_notice: yes
+is_license_reference: yes
 relevance: 100
 ignorable_urls:
-    - http://opensource.org/licenses/bsd-license.php
+  - http://opensource.org/licenses/bsd-license.php
