--- a/src/licensedcode/data/rules/cc-by-nc-sa-3.0_licensebutton.yml
+++ b/src/licensedcode/data/rules/cc-by-nc-sa-3.0_licensebutton.yml
@@ -1,5 +1,5 @@
 license_expression: cc-by-nc-sa-3.0
-is_license_notice: yes
+is_license_reference: yes
 relevance: 100
 ignorable_urls:
-    - https://licensebuttons.net/l/by-nc-sa/3.0
+  - https://licensebuttons.net/l/by-nc-sa/3.0
