--- a/src/licensedcode/data/rules/cc-by-sa-4.0_18.yml
+++ b/src/licensedcode/data/rules/cc-by-sa-4.0_18.yml
@@ -1,5 +1,5 @@
 license_expression: cc-by-sa-4.0
-is_license_notice: yes
+is_license_reference: yes
 relevance: 100
 ignorable_urls:
-    - https://creativecommons.org/licenses/by-sa/4.0
+  - https://creativecommons.org/licenses/by-sa/4.0
