--- a/src/licensedcode/data/rules/lgpl-2.1-plus_286.yml
+++ b/src/licensedcode/data/rules/lgpl-2.1-plus_286.yml
@@ -1,4 +1,4 @@
 license_expression: lgpl-2.1-plus
-is_license_notice: yes
+is_license_reference: yes
 relevance: 100
 notes: Seen in pacemaker HTML doc
