--- a/src/licensedcode/data/rules/mit_429.yml
+++ b/src/licensedcode/data/rules/mit_429.yml
@@ -1,5 +1,5 @@
 license_expression: mit
-is_license_notice: yes
+is_license_reference: yes
 relevance: 100
 ignorable_urls:
-    - https://www.opensource.org/licenses/mit-license.php
+  - https://www.opensource.org/licenses/mit-license.php
