--- a/src/licensedcode/data/rules/proprietary_greensock_8.yml
+++ b/src/licensedcode/data/rules/proprietary_greensock_8.yml
@@ -1,5 +1,5 @@
 license_expression: proprietary-license
-is_license_notice: yes
+is_license_reference: yes
 relevance: 90
 ignorable_urls:
-    - http://www.greensock.com/
+  - http://www.greensock.com/
