--- a/src/licensedcode/data/licenses/csl-1.0.yml
+++ b/src/licensedcode/data/licenses/csl-1.0.yml
@@ -4,7 +4,9 @@ name: Community Specification License 1.0
 category: Permissive
 owner: Linux Foundation
 homepage_url: https://github.com/CommunitySpecification/1.0
-spdx_license_key: LicenseRef-scancode-csl-1.0
+spdx_license_key: Community-Spec-1.0
+other_spdx_license_keys:
+    - LicenseRef-scancode-csl-1.0
 text_urls:
     - https://github.com/CommunitySpecification/1.0/blob/master/1._Community_Specification_License-v1.md
 other_urls:
