--- a/src/licensedcode/data/licenses/fraunhofer-fdk-aac-codec.yml
+++ b/src/licensedcode/data/licenses/fraunhofer-fdk-aac-codec.yml
@@ -10,9 +10,11 @@ other_spdx_license_keys:
 text_urls:
     - http://opencore-amr.git.sourceforge.net/git/gitweb.cgi?p=opencore-amr/fdk-aac;a=blob;f=NOTICE
 other_urls:
-    - https://fedoraproject.org/wiki/Licensing/FDK-AAC
-    - https://directory.fsf.org/wiki/License:Fdk
+    - amm-info@iis.fraunhofer.de
     - http://www.iis.fraunhofer.de/amm
+    - https://directory.fsf.org/wiki/License:Fdk
+    - https://fedoraproject.org/wiki/Licensing/FDK-AAC
+    - www.iis.fraunhofer.de/amm
 minimum_coverage: 40
 ignorable_copyrights:
     - (c) Copyright 1995 - 2012 Fraunhofer-Gesellschaft zur Forderung der angewandten Forschung
