Improve French and German copyright detection
Also remove some spurious trailing period.

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/att_in_c-9_c.c.yml
+++ b/tests/cluecode/data/copyrights/att_in_c-9_c.c.yml
@@ -5,7 +5,7 @@ what:
 copyrights:
   - Copyright (c) 1991 by AT&T.
 holders:
-  - AT&T.
+  - AT&T
 holders_summary:
-  - value: AT&T.
+  - value: AT&T
     count: 1
