--- a/tests/cluecode/data/copyrights/cern-copyrights_4.txt.yml
+++ b/tests/cluecode/data/copyrights/cern-copyrights_4.txt.yml
@@ -6,6 +6,6 @@ copyrights:
   - copyright of CERN.
   - copyright CERN.
 holders:
-  - CERN.
-  - CERN.
-notes: nothing should be detected
+  - CERN
+  - CERN
+
