--- a/tests/cluecode/data/ics/zlib-contrib-minizip/unzip.c.yml
+++ b/tests/cluecode/data/ics/zlib-contrib-minizip/unzip.c.yml
@@ -14,7 +14,7 @@ holders:
   - Gilles Vollant
   - Even Rouault
   - Mathias Svensson
-  - Info-ZIP.
+  - Info-ZIP
   - Even Rouault
   - Gilles Vollant, Even Rouault, Mathias Svensson
   - Gilles Vollant
@@ -25,7 +25,7 @@ holders_summary:
     count: 2
   - value: Gilles Vollant, Even Rouault, Mathias Svensson
     count: 1
-  - value: Info-ZIP.
+  - value: Info-ZIP
     count: 1
   - value: Mathias Svensson
     count: 1
